Fixed spacing issue with boolean fields.
git-svn-id: https://subversion.assembla.com/svn/mdss@6577 e0e46c49-be69-4f5a-ad62-21024a331aea

Former-commit-id: fd4521f17422ddb554d47d2217f04d4b698a0bfb [formerly 0d894b48e8f075f8190bf37d8ea49a4a2a4c30c2]
Former-commit-id: ede6f48879aa4563bdc580c0125e1fa49e08a9c2

--- a/trunk/webapp/css/style.css
+++ b/trunk/webapp/css/style.css
@@ -1354,6 +1354,10 @@ span.generatedViewCommand:hover {
   cursor: pointer;
 }
 
+.boolean-field-container * {
+  margin-right: 5px;
+}
+
 /*---------------------------------------------------------------*/ /*   DO NOT PUT ANYTHING BELOW THE PRINT SYTLES                */ /*---------------------------------------------------------------*/
 @media screen {
   .printOnly {
